--- a/infra/ansible/playbook.yml
+++ b/infra/ansible/playbook.yml
@@ -3,6 +3,7 @@
   become: true
   vars_files:
       - ./vars.yml
+
   tasks:
       - name: add users
         user:
@@ -10,3 +11,25 @@
          password: "{{ item.password | password_hash('sha512') }}"
          state: present
         with_items: "{{ user_details }}"
+
+      - name: Install required system packages
+        apt: name={{ item }} state=latest update_cache=yes
+        with_items:
+          - apt-transport-https
+          - ca-certificates
+          - curl
+          - software-properties-common
+          - python3-pip
+
+      - name: Add Docker GPG apt Key
+        apt_key:
+          url: https://download.docker.com/linux/ubuntu/gpg
+          state: present
+
+      - name: Add Docker Repository
+        apt_repository:
+          repo: deb https://download.docker.com/linux/ubuntu bionic stable
+          state: present
+
+      - name: Update apt and install docker-ce
+        apt: name= docker-ce state=latest update_cache=yes
