--- a/infra/ansible/playbook.yml
+++ b/infra/ansible/playbook.yml
@@ -26,3 +26,6 @@
 
     - name: Certbot Install
       include_tasks: ./certbot.yaml
+
+    - name: Install app directory
+      include_tasks: ./app_directory.yaml
