force copy in app_directory

--- a/infra/ansible/app_directory.yaml
+++ b/infra/ansible/app_directory.yaml
@@ -5,9 +5,11 @@
     dest: /home/adminsys
     owner: adminsys
     group: adminsys
+    remote_src: yes
 
   copy:
     src: ../../Dev
     dest: /home/adminsys
     owner: adminsys
     group: adminsys
+    remote_src: yes
