--- a/infra/ansible/app_directory.yaml
+++ b/infra/ansible/app_directory.yaml
@@ -1,15 +1,10 @@
 ---
-- name: Add App Directories for Docker-Compose
+- name: Add App Directories for Docker-Compose 1/2
   copy:
     src: ../docker
     dest: /home/adminsys
-    owner: adminsys
-    group: adminsys
-    remote_src: yes
 
+- name: Add App Directories for Docker-Compose 2/2
   copy:
     src: ../../Dev
-    dest: /home/adminsys
-    owner: adminsys
-    group: adminsys
-    remote_src: yes
+    dest: /home/adminsys/docker
