--- a/infra/docker/Dockerfile
+++ b/infra/docker/Dockerfile
@@ -1,16 +1,19 @@
 FROM ubuntu
 
-RUN apt-get update && apt-get -y install python3 python3-pip nano iputils-ping python3-mysqldb apache2 libapache2-mod-wsgi-py3
+ENV TZ=Europe/Paris
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
-WORKDIR ../Dev
+RUN apt-get update && apt-get -y install python3 python3-pip nano iputils-ping python3-mysqldb
+#apache2 libapache2-mod-wsgi-py3
 
-COPY ./ /home/Flask_app
+COPY ./Dev /home/FlaskApp
 
-WORKDIR ../infra/docker/
+RUN ls -l /home/FlaskApp
 
-COPY ./infra/docker/requirements .
+WORKDIR ./docker
+
+COPY ./requirements .
 
 RUN pip3 install -r requirements
 
-ENTRYPOINT  FLASK_APP=/home/Flask_app/main.py \
-            flask run --host=0.0.0.0
+ENTRYPOINT  FLASK_APP=/home/FlaskApp/main.py flask run --host=0.0.0.0
