--- a/infra/docker/Dockerfile
+++ b/infra/docker/Dockerfile
@@ -6,7 +6,7 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 RUN apt-get update && apt-get -y install python3 python3-pip nano iputils-ping python3-mysqldb
 #apache2 libapache2-mod-wsgi-py3
 
-COPY ./Dev /home/FlaskApp
+COPY ./app /home/FlaskApp
 
 RUN ls -l /home/FlaskApp
 
