--- a/infra/docker/Dockerfile
+++ b/infra/docker/Dockerfile
@@ -2,9 +2,11 @@ FROM ubuntu
 
 ENV TZ=Europe/Paris
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
-
-RUN apt-get update && apt-get -y install python3 python3-pip nano iputils-ping python3-mysqldb
-#apache2 libapache2-mod-wsgi-py3
+RUN apt-get update && apt-get -y install \
+   python3 \
+   python3-pip \
+   python3-mysqldb \
+   iputils-ping
 
 COPY ./app /home/FlaskApp
 
