--- a/infra/ansible/playbook.yml
+++ b/infra/ansible/playbook.yml
@@ -1,6 +1,7 @@
 ---
 - hosts: all
   become: true
+  gather_facts: no
   vars_files:
       - ./vars.yml
 
@@ -29,3 +30,6 @@
 
     - name: Install app directory
       include_tasks: ./app_directory.yaml
+
+    - name: Execute docker-compose
+      command: docker-compose -f /home/adminsys/docker/docker-compose.yml up -d
