--- a/infra/ansible/playbook.yml
+++ b/infra/ansible/playbook.yml
@@ -4,9 +4,10 @@
   gather_facts: no
   vars_files:
       - ./vars.yml
+      - ./users.yml
 
   tasks:
-    - name: add users #(passwords to vaults)
+    - name: add users
       user:
         name: "{{ item.name }}"
         password: "{{ item.password | password_hash('sha512') }}"
