--- a/infra/ansible/certbot.yaml
+++ b/infra/ansible/certbot.yaml
@@ -7,9 +7,9 @@
 
 - name: Check if certificate already exists.
   stat:
-    path: /etc/letsencrypt/live/dev.exelander.fr/cert.pem
+    path: /etc/letsencrypt/live/"{{ domain_dev }}"/cert.pem
   register: letsencrypt_cert
 
 - name: Generate new certificate if one doesn't exist.
-  command: certbot run --apache --noninteractive --agree-tos --email alexandre.deresnes@gmail.com -d dev.exelander.fr --redirect
+  command: certbot run --apache --noninteractive --agree-tos --email "{{ domain_email }}" -d "{{ domain_dev }}" --redirect
   when: not letsencrypt_cert.stat.exists
