--- a/infra/ansible/playbook.yml
+++ b/infra/ansible/playbook.yml
@@ -3,7 +3,7 @@
   become: true
   gather_facts: no
   vars_files:
-      - ./vars/vars.yml
+      - ./vars/apachehttps.yml
       - ./vars/users.yml
       - ./vars/credentials.yml
 
