--- a/infra/ansible/apache2.yaml
+++ b/infra/ansible/apache2.yaml
@@ -31,14 +31,15 @@
 
 - name: Add Apache vhost
   copy:
-    src: ./apache/vhost.conf
-    dest: /etc/apache2/sites-available/
+    src: ./apache/vhost.conf.j2
+    dest: /etc/apache2/sites-available/{{ http_conf }}
 
 - name: Rename vhost
-  command: mv /etc/apache2/sites-available/vhost.conf /etc/apache2/sites-available/"{{ domain_dev }}".conf
+  command: mv /etc/apache2/sites-available/vhost.conf /etc/apache2/sites-available/{{ http_conf }}.conf
 
-- name: a2ensite {{ domain_dev }}.conf
-  command: a2ensite "{{ domain_dev }}".conf
+
+- name: a2ensite {{ http_conf }}.conf
+  command: a2ensite {{ http_conf }}.conf
 
 - name: restart apache2
   service:
