debug docker install

--- a/infra/ansible/docker.yaml
+++ b/infra/ansible/docker.yaml
@@ -9,6 +9,12 @@
     repo: "deb https://download.docker.com/linux/ubuntu focal stable"
     state: present
 
+- name: Install Docker
+  apt:
+    name: docker
+    state: latest
+    update_cache: yes
+
 - name: Add adminsys to docker group
   user:
     name: adminsys
