--- a/install_docker.yml
+++ b/install_docker.yml
@@ -23,7 +23,7 @@
     - name: Add adminsys to docker group
       user:
         name: ubuntu
-        groups: docker, sudo, adminsys
+        groups: docker
         append: yes
 
     - name: Add Docker-compose
