--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,7 @@ services:
     volumes:
       - /var/log/mysql-db:/var/log/mysql
       - /var/lib/mysql:/var/lib/mysql
-      - ./mysql:/docker-entrypoint-initdb.d
+      - ./app/mysql:/docker-entrypoint-initdb.d
     ports:
       - 3306:3306
     networks:
