--- a/install_docker.yml
+++ b/install_docker.yml
@@ -4,6 +4,12 @@
   gather_facts: no
 
   tasks:
+    - name: Install required system packages
+      apt:
+        name: [ 'apt-transport-https','ca-certificates','curl','software-properties-common','python3-pip' ]
+        state: latest
+        update_cache: yes
+
     - name: Add Docker GPG apt Key
       apt_key:
         url: "https://download.docker.com/linux/ubuntu/gpg"
