upate for docker build

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -12,7 +12,7 @@ COPY ./app /home/FlaskApp
 
 #RUN ls -l /home/FlaskApp
 
-COPY ./requirements .
+COPY ../requirements .
 
 RUN pip3 install -r requirements
 
