--- a/roles/app_directory.yaml
+++ b/roles/app_directory.yaml
@@ -4,24 +4,7 @@
     src: ./app
     dest: /home/ubuntu/project
 
-#- name: Add Files for Docker-Compose
-#  copy: src= {{ item.src }} dest= {{ item.dest }}
-#  with_items:
-#    - { src: './docker-compose.yml', dest: '/home/ubuntu/project' }
-#    - { src: './Dockerfile', dest: '/home/ubuntu/project' }
-#    - { src: './requirements', dest: '/home/ubuntu/project' }
-
-- name: Add Files for Docker-Compose 1/3
+- name: Add Docker-Compose File
   copy:
     src: ./docker-compose.yml
-    dest: /home/ubuntu/project
-
-- name: Add Files for Docker-Compose 2/3
-  copy:
-    src: ./Dockerfile
-    dest: /home/ubuntu/project
-
-- name: Add Files for Docker-Compose 3/3
-  copy:
-    src: ./requirements
     dest: /home/ubuntu/project
