--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,8 @@ networks:
 services:
   app:
     hostname: app
-    #image: aderesnes/app:flaskapp
+    image: fredericfolon/app:latest
     restart: always
-    build: .
     ports:
       - 5000:5000
     links:
