--- a/playbook.yml
+++ b/playbook.yml
@@ -26,4 +26,4 @@
       include_tasks: ./roles/app_directory.yaml
 
     - name: Execute docker-compose
-      command: docker-compose -f /home/ubuntu/project/docker-compose.yml up --build -d
+      command: docker-compose -f /home/ubuntu/project/docker-compose.yml up -d
